--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,17 +1,104 @@
+@use '../abstracts/mixins' as *;
+
 .footer {
-  display: flex;
+  padding: 80px 0;
+  color: #fffbed;
+  background-color: #372e11;
+
+  a {
+    color: #fffbed;
+    text-decoration: none;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 30px;
+  }
+
+  &__socials,
+  &__contacts {
+    flex-shrink: 0;
+  }
 
   &__offices-wrapper {
     display: flex;
+    // flex-wrap: wrap;
+    column-gap: 40px;
+  }
+
+  &__offices-col {
+    max-width: 275px;
   }
 
   &__socials-wrapper {
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
+    font-size: 20px;
   }
 
   &__contacts-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    font-size: 20px;
+  }
+
+  &__title {
+    @include typo-title(24px);
+    margin-bottom: 24px;
+  }
+
+  &__phone {
+    @include typo-phone();
+    margin-bottom: 15px;
+  }
+
+  &__email {
+    color: #000;
+    text-decoration: none;
+    margin-bottom: 15px;
+  }
+
+  &__instagram {
+    margin-bottom: 15px;
+  }
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    padding: 14px 32px;
+    font-size: 16px;
+  }
+
+  @media (max-width: 1000px) {
+    &__container {
+      flex-wrap: wrap;
+    }
+
+    // &__offices,
+    // &__contacts {
+    //   width: 40%;
+    // }
+    &__socials {
+      width: 100%;
+    }
+
+    &__offices-wrapper {
+      // flex-wrap: wrap;
+      flex-direction: column;
+    }
+
+    &__socials {
+      order: 10;
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__socials {
+      order: 0;
+    }
   }
 }
