--- a/src/styles/layout/_main-screen.scss
+++ b/src/styles/layout/_main-screen.scss
@@ -1,23 +1,50 @@
+@use '../abstracts/mixins' as *;
+
 .main-screen {
+  padding-bottom: 290px;
+  background-image: url('../../public/img/bg.png');
+  background-position: calc(50% - 200px) calc(50% + 210px);
+
   &__content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 400px;
+    width: 100%;
+    max-width: 900px;
     margin: 0 auto;
     text-align: center;
   }
 
   &__title {
-    margin-bottom: 30px;
+    @include typo-title(56px);
+    margin-bottom: 40px;
   }
 
   &__subtitle {
-    margin-bottom: 30px;
+    @include typo-content(26px, 300, 1.2);
+    width: 100%;
+    max-width: 700px;
+    margin-bottom: 58px;
   }
 
   &__buttons {
     display: flex;
     column-gap: 15px;
+  }
+
+  @media (max-width: 1000px) {
+    padding-bottom: 210px;
+  }
+
+  @media (max-width: 767px) {
+    padding-bottom: 150px;
+
+    &__title {
+      font-size: 24px;
+    }
+
+    &__subtitle {
+      font-size: 16px;
+    }
   }
 }
