--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 @use './base/reset';
+@use './base/typography';
+@use './components/header';
+@use './components/button';
+@use './components/input';
+@use './layout/container';
 @use './layout/body';
 @use './layout/main-screen';
 @use './layout/form';
 @use './layout/footer';
-@use './components/header';
-@use './components/button';
-@use './components/input';
