--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/mixins' as *;
+@use 'sass:color';
 
 .btn {
   @include typo-content(18px, 600, 1.2);
@@ -7,9 +8,18 @@
   border-radius: 12px;
   background-color: #ffe182;
   cursor: pointer;
+  transition: background 0.2s;
+
+  &:hover {
+    background-color: color.scale(#ffe182, $lightness: -10%);
+  }
 
   &_gray {
     background-color: #ededed;
+
+    &:hover {
+      background-color: color.scale(#ededed, $lightness: -10%);
+    }
   }
 
   &_outline {
@@ -18,15 +28,24 @@
     border-radius: 12px;
     background-color: transparent;
     font-weight: 500;
+
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   &_empty {
     padding: 14px 30px;
     background-color: transparent;
     font-weight: 500;
+
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   @media (max-width: 767px) {
+    padding: 12px 8px;
     font-size: 16px;
   }
 }
