--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -46,6 +46,10 @@
     display: none;
   }
 
+  &__overlay {
+    display: none;
+  }
+
   @media (max-width: 1000px) {
     margin-bottom: 60px;
 
@@ -60,7 +64,15 @@
       display: block;
     }
 
+    &__lang {
+      display: flex;
+      column-gap: 8px;
+      padding: 0 8px;
+      font-size: 20px;
+    }
+
     &__overlay {
+      display: block;
       position: fixed;
       z-index: 10;
       left: 0;
@@ -109,6 +121,7 @@
     &__ru,
     &__eng {
       color: #9b9b99;
+      text-decoration: none;
     }
 
     &__ru._active {
@@ -116,11 +129,28 @@
     }
 
     &__burger {
-      position: relative;
-      display: block;
-      width: 30px;
-      height: 18px;
+      width: 40px;
+      height: 30px;
+      padding: 5px;
       cursor: pointer;
+
+      &:hover {
+        i {
+          width: 100%;
+        }
+
+        .header__burger-lines::before {
+          width: 100%;
+        }
+      }
+    }
+
+    &__burger-lines {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      // width: 30px;
+      // height: 18px;
 
       i {
         position: absolute;
@@ -154,25 +184,12 @@
         background-color: #000;
         transition: width 0.15s;
       }
-
-      &:hover {
-        i {
-          width: 100%;
-        }
-
-        &::after {
-          width: 100%;
-        }
-
-        &::before {
-          width: 100%;
-        }
-      }
     }
   }
 
   @media (max-width: 767px) {
     margin-bottom: 94px;
+    padding: 10px 0;
     font-size: 16px;
 
     &__profile {
@@ -189,6 +206,14 @@
 
     &__phone {
       padding: 0 8px;
+    }
+
+    &__lang {
+      font-size: 16px;
+    }
+
+    &__burger {
+      width: 30px;
     }
   }
 }
