--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -74,21 +74,20 @@
   }
 
   @media (max-width: 1000px) {
+    padding: 40px 0;
+
     &__container {
       flex-wrap: wrap;
+      row-gap: 48px;
     }
 
-    // &__offices,
-    // &__contacts {
-    //   width: 40%;
-    // }
     &__socials {
       width: 100%;
     }
 
     &__offices-wrapper {
-      // flex-wrap: wrap;
       flex-direction: column;
+      row-gap: 16px;
     }
 
     &__socials {
@@ -97,6 +96,9 @@
   }
 
   @media (max-width: 767px) {
+  }
+
+  @media (max-width: 600px) {
     &__socials {
       order: 0;
     }
