refactor: color variables

--- a/src/styles/abstracts/_consts.scss
+++ b/src/styles/abstracts/_consts.scss
@@ -1,1 +1,8 @@
-$color: #fffbed;
+$main_light: #fffbed;
+$main_dark: #372e11;
+$brown: #8e825c;
+$yellow: #ffe182;
+$gray: #ededed;
+$gray_dark: #9b9b99;
+$input_bg: #fff8e1;
+$green_dark: #0e493f;
