--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/mixins' as *;
+@use '../abstracts/consts' as *;
 @use 'sass:color';
 
 .btn {
@@ -6,25 +7,25 @@
   padding: 22px 34px;
   border: none;
   border-radius: 12px;
-  background-color: #ffe182;
+  background-color: $yellow;
   cursor: pointer;
   transition: background 0.2s;
 
   &:hover {
-    background-color: color.scale(#ffe182, $lightness: -10%);
+    background-color: color.scale($yellow, $lightness: -10%);
   }
 
   &_gray {
-    background-color: #ededed;
+    background-color: $gray;
 
     &:hover {
-      background-color: color.scale(#ededed, $lightness: -10%);
+      background-color: color.scale($gray, $lightness: -10%);
     }
   }
 
   &_outline {
     padding: 14px 30px;
-    border: 1px solid #000000;
+    border: 1px solid #000;
     border-radius: 12px;
     background-color: transparent;
     font-weight: 500;
