--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/mixins' as *;
+@use '../abstracts/consts' as *;
 
 .inp {
   @include typo-content(14px, 500, 1.2);
@@ -6,11 +7,11 @@
   padding: 16px 8px;
   border: none;
   border-radius: 6px;
-  background: #fff8e1;
+  background: $input_bg;
 
   &:focus-visible,
   &:focus {
-    outline: #ffe182 solid 2px;
+    outline: $yellow solid 2px;
   }
 }
 
@@ -20,7 +21,7 @@
   justify-content: center;
   width: 20px;
   height: 20px;
-  background: #0e493f;
+  background: $green_dark;
   border-radius: 4px;
 
   > svg {
