--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,12 +1,13 @@
 @use '../abstracts/mixins' as *;
+@use '../abstracts/consts' as *;
 
 .footer {
   padding: 80px 0;
-  color: #fffbed;
-  background-color: #372e11;
+  color: $main_light;
+  background-color: $main_dark;
 
   a {
-    color: #fffbed;
+    color: $main_light;
     text-decoration: none;
   }
 
@@ -23,7 +24,6 @@
 
   &__offices-wrapper {
     display: flex;
-    // flex-wrap: wrap;
     column-gap: 40px;
   }
 
@@ -56,7 +56,7 @@
   }
 
   &__email {
-    color: #000;
+    color: $main_dark;
     text-decoration: none;
     margin-bottom: 15px;
   }
