--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/mixins' as *;
+@use '../abstracts/consts' as *;
 
 .form {
   padding: 200px 0;
@@ -14,7 +15,7 @@
     max-width: 1140px;
     margin: 0 auto;
     padding: 80px;
-    background-color: #fffbed;
+    background-color: $main_light;
     background-image: url(../../public/img/bg-form-content.jpg);
     background-size: cover;
   }
@@ -117,8 +118,6 @@
     }
 
     &__field {
-      // margin-bottom: 20px;
-
       &:last-of-type {
         margin-bottom: 45px;
       }
