feat: toggle form

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -8,6 +8,8 @@
   border: none;
   border-radius: 12px;
   background-color: $yellow;
+  color: $main_dark;
+  text-decoration: none;
   cursor: pointer;
   transition: background 0.2s;
 
